# ChatQT

./: CMakeLists.txt  ChatDelegate.cpp  ChatDelegate.h  ChatModel.cpp  ChatModel.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  resources.rc  settingswindow.cpp  settingswindow.h
